@@ -7,6 +7,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Added
 - New option: includePath
+- New option: javaOptions
+- New option: plantUmlArgs
 
 ## [1.0.0] - 2020-06-23
 ### Added
